--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "react-onsenui-redux-weather",
+  "name": "de.sampleApp",
   "version": "1.0.0",
-  "description": "Simple Weather App implemntation with Onsen UI React Components and Redux",
+  "description": "Sample App based on React-redux",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --host 0.0.0.0 --progress --content-base www/",
-    "build": "npm run lint && cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
+    "start": "webpack-dev-server --host 127.0.0.1 --progress --content-base www/",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
     "deploy": "npm run build && git commit www -m \"Deploy\" && git subtree push --prefix www origin gh-pages",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/argelius/react-onsenui-redux-weather.git"
+    "url": ""
   },
-  "author": "Andreas Argelius <andreas@argeli.us>",
+  "author": "Hasibullah Sahibzada <hasibullah@sahibzada.org>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/argelius/react-onsenui-redux-weather/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/argelius/react-onsenui-redux-weather#readme",
+  "homepage": "",
   "devDependencies": {
     "autoprefixer": "^6.5.1",
     "babel-core": "^6.18.0",
@@ -41,8 +42,6 @@
     "onsenui": "^2.0.4",
     "postcss-loader": "^1.0.0",
     "promise": "^7.1.1",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-onsenui": "^1.0.4",
     "react-redux": "^4.4.5",
@@ -55,5 +54,15 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "@kadira/storybook": "^2.35.3",
+    "getstorybook": "^1.7.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.7",
+    "redux-persist": "^4.1.1",
+    "redux-saga": "^0.14.3"
   }
 }
